[package]
name = "ein-key"
version = "0.1.0"
edition = "2021"

[dependencies]
bitmaps = "3.2.1"
gpui = { git = "https://github.com/zed-industries/zed.git", rev = "de08e47" }
windows = { version = "0.59.0", features = [
	"Win32_System_LibraryLoader",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_WindowsAndMessaging",
] }
