[package]
name = "ein-key"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git", rev = "de08e47" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
windows = { version = "0.59.0", features = [
	"Win32_System_LibraryLoader",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_WindowsAndMessaging",
] }
